# direct-data-driven-mpc

./: .codecov.yml  .pre-commit-config.yaml  .yamllint.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_workflow.yml  docs.yml  release.yml  test_main.yml
_modules/: index.html
_modules/direct_data_driven_mpc/: lti_data_driven_mpc_controller.html  nonlinear_data_driven_mpc_controller.html
_sources/sections/: project_structure.rst  usage.rst
_static/: documentation_options.js  styles.css
api/: index.html
api/controllers/: lti_controller.html  nonlinear_controller.html
api/utilities/: common_utilities.html  controller.html  index.html  models.html  visualization.html
direct_data_driven_mpc/: direct_data_driven_mpc_controller.py  lti_data_driven_mpc_controller.py  nonlinear_data_driven_mpc_controller.py
direct_data_driven_mpc/utilities/: __init__.py  data_visualization.py  hankel_matrix.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: direct_data_driven_mpc_example.py  robust_data_driven_mpc_reproduction.py
examples/lti_control/: lti_dd_mpc_example.py  paper_reproduction_utils.py  robust_lti_dd_mpc_reproduction.py
examples/nonlinear_control/: nonlinear_cstr_model.py  nonlinear_dd_mpc_example.py
genindex/: index.html
py-modindex/: index.html
search/: index.html
sections/: installation.html  license.html  paper_reproduction.html  project_structure.html  usage.html
sections/installation/: index.html
sections/license/: index.html
sections/paper_reproduction/: index.html
sections/project_structure/: index.html
sections/usage/: index.html
tests/: conftest.py  mocks.py  test_lti_dd_mpc_integration.py  test_nonlinear_dd_mpc_integration.py
tests/test_controllers/: conftest.py  test_lti_dd_mpc_controller_unit.py  test_nonlinear_dd_mpc_controller_unit.py
tests/test_utilities/: conftest.py  test_data_visualization.py  test_hankel_matrix.py  test_initial_state_estimation.py  test_yaml_config_loading.py
utilities/: initial_state_estimation.py  model_simulation.py
utilities/controller/: controller_creation.py  controller_operation.py  controller_params.py  data_driven_mpc_sim.py  initial_data_generation.py
utilities/models/: lti_model.py  nonlinear_model.py
utilities/reproduction/: paper_reproduction.py
utilities/visualization/: data_visualization.py  (+1 more)
(+137 files in other folders)
