[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "direct_data_driven_mpc"
version = "1.1"
authors = [
  { name = "Pável A. Campos-Peña", email = "pcamposp@uni.pe" }
]
description = "Python implementation of robust and nonlinear Direct Data-Driven MPC controllers for LTI and nonlinear systems."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10.0"
dependencies = [
  "numpy",
  "matplotlib>=3.9.0",
  "cvxpy",
  "tqdm",
  "PyYAML",
  "PyQt6",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "data-driven",
  "mpc",
  "model-predictive-control",
  "robust-control",
  "nonlinear-control",
  "data-driven-control",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pavelacamposp/direct_data_driven_mpc"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "mypy",
]
