[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "direct_data_driven_mpc"
version = "1.1"
authors = [
  { name = "Pável A. Campos-Peña", email = "pcamposp@uni.pe" }
]
description = "Python implementation of robust and nonlinear Direct Data-Driven MPC controllers for LTI and nonlinear systems."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10.0"
dependencies = [
  "numpy",
  "matplotlib>=3.9.0",
  "cvxpy",
  "tqdm",
  "PyYAML",
  "PyQt6",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "data-driven",
  "mpc",
  "model-predictive-control",
  "robust-control",
  "nonlinear-control",
  "data-driven-control",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pavelacamposp/direct_data_driven_mpc"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "mypy",
]

[tool.ruff]
line-length = 79
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
extend-select = ["I", "D", "B", "C4", "E", "F", "W"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D205",
  "D212",
  "D400",
  "D413",
  "D415",
]

[tool.mypy]
install_types = true
non_interactive = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.codespell]
ignore-words-list = "Ot"
